--- a/internal/http/public/index.html
+++ b/internal/http/public/index.html
@@ -78,6 +78,7 @@
             }
             routingControl._clearLines()
             marker.setLatLng({lat: 0, lng: 0})
+            maxSpeedInput.readOnly = false;
         }).catch((error) => {
             console.error('Error:', error);
         });
@@ -101,6 +102,7 @@
 
                 statusText.textContent = formatRouteName(message.name, message.distance)
                 maxSpeedInput.value = message.maxSpeed || 0;
+                maxSpeedInput.readOnly = true;
 
                 if (message.points && message.points.length > 0) {
                     // Convert points to LatLng format
@@ -208,6 +210,7 @@
 
     routingControl.on('routesfound', function (e) {
         statusText.textContent = formatRouteName(e.routes[0].name, e.routes[0].summary.totalDistance)
+        maxSpeedInput.readOnly = true;
 
         fetch('/route', {
             method: 'POST',
